--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 </div>
                 <div class="age">
                     <label for="idade">Idade: </label>
-                    <input type="number" placeholder="Idade" required>
+                    <input type="number" placeholder="Idade" id="idade" name="idade" required>
                 </div>
             </div>
             <div class="education_level">
