--- a/index.html
+++ b/index.html
@@ -29,12 +29,12 @@
                 </div>
                 <div class="age">
                     <label for="idade">Idade: </label>
-                    <input type="number" placeholder="Idade" id="idade" name="idade" required>
+                    <input type="number" name="idade" id="idade" required placeholder="Idade">
                 </div>
             </div>
             <div class="education_level">
-                <label>Nivel de escolaridade</label>
-                <select name="education_level" id="education_level" required>
+                <label for="education_level">Nivel de escolaridade</label>
+                <select name="education_level" id="education_level" name="education_level" required>
                     <option value="" selected disabled>Selecione seu nivel de escolaridade</option>
                     <option value="incomplete_pe">Ensino fundamental incompleto</option>
                     <option value="complete_pe">Ensino fundamental completo</option>
